[FIX] Fixed the navbar position on mobile

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -10,7 +10,8 @@
 */
 
 .nav {
-    position: absolute;
+    //position: absolute;
+    position: fixed;
 	top: 0;
 	font-family: 'Lato', sans-serif;
 	width: 100%;
