--- a/src/containers/Intro/Intro.scss
+++ b/src/containers/Intro/Intro.scss
@@ -13,9 +13,11 @@
     display: inline-block;
     margin: 10px auto 0 auto;
     width: 100%;
+    padding: .5rem;
 
     @include tablet {
         margin: 0px auto 0 auto;
+        padding: 0;
     }
 
     @include desktop {
@@ -39,7 +41,7 @@
 		font-size: 1em;
         line-height: 1.7em;
         padding: 0.5rem;
-        margin: 0 auto;
+        margin: 40px auto;
         
         @include tablet {
             flex-grow: 1;
